# docs/swagger.json
@@ -62,6 +62,76 @@
                 }
             }
         },
+        "/exoplanets/{id}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Exoplanets"
+                ],
+                "summary": "Get Explonets by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Exoplanet ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Exoplanet"
+                        }
+                    },
+                    "404": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Exoplanets"
+                ],
+                "summary": "Update Explonets by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Exoplanet ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Exoplanet"
+                        }
+                    },
+                    "404": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "summary": "Delete Explonets by ID",
+                "responses": {}
+            }
+        },
         "/ping": {
             "get": {
                 "description": "This end point respond to pings",
@@ -93,8 +163,7 @@
                 "description",
                 "distance",
                 "name",
-                "radius",
-                "type"
+                "radius"
             ],
             "properties": {
                 "description": {
@@ -120,9 +189,24 @@
                 },
                 "type": {
                     "description": "GasGiant or Terrestrial",
-                    "type": "string"
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.ExoplanetType"
+                        }
+                    ]
                 }
             }
+        },
+        "models.ExoplanetType": {
+            "type": "string",
+            "enum": [
+                "GasGiant",
+                "Terrestrial"
+            ],
+            "x-enum-varnames": [
+                "GasGiant",
+                "Terrestrial"
+            ]
         }
     }
 }
