# pkg/controllers/exoplanate.go
@@ -2,19 +2,28 @@ package controllers
 
 import (
 	"net/http"
+	"strconv"
 
 	"exoplant_services/pkg/Api/models"
 	"exoplant_services/pkg/services"
 
 	"github.com/gin-gonic/gin"
+	"github.com/sirupsen/logrus"
 )
+
+var logger *logrus.Logger
+
+func SetLogger(l *logrus.Logger) {
+	logger = l
+}
 
 func Exoplanate(group *gin.RouterGroup) {
 
 	group.POST("/exoplanets", AddExoplanet)
 	group.GET("/exoplanets", GetAllExoplanet)
-	// group.PUT("/exoplanete/:id", EditExoplanet)
-	// group.DELETE("/exoplanete/:id", DeleteExoplanet)
+	group.GET("/exoplanets/:id", GetExoplanetByID)
+	group.PUT("/exoplanete/:id", UpdateExoplanet)
+	group.DELETE("/exoplanete/:id", DeleteExoplanet)
 
 }
 
@@ -62,7 +71,83 @@ func GetAllExoplanet(c *gin.Context) {
 		}
 		return
 	}
-	//logger.Info("Exoplanete retrieved successfully")
+	logger.Info("Exoplanete retrieved successfully")
 	c.JSON(http.StatusOK, exop)
 
+}
+
+// @Summary Get Explonets by ID
+// @Produce json
+// @Tags Exoplanets
+// @Param id path int true "Exoplanet ID"
+// @Success 200 {object} models.Exoplanet
+// @Failure 404 {string} string "error"
+// @Router /exoplanets/{id} [GET]
+func GetExoplanetByID(c *gin.Context) {
+	// Get the ID from the URL parameters
+	idParam := c.Param("id")
+	id, err := strconv.Atoi(idParam)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid ID parameter"})
+		return
+	}
+
+	// Call the service layer
+	exoplanet, status, err := services.GetExoplanetByID(id)
+	if err != nil {
+		c.JSON(status, gin.H{"error": err.Error()})
+		return
+	}
+
+	// Return the exoplanet data as JSON
+	c.JSON(http.StatusOK, exoplanet)
+}
+
+// @Summary Update Explonets by ID
+// @Produce json
+// @Tags Exoplanets
+// @Param id path int true "Exoplanet ID"
+// @Success 200 {object} models.Exoplanet
+// @Failure 404 {string} string "error"
+// @Router /exoplanets/{id} [PUT]
+func UpdateExoplanet(c *gin.Context) {
+	var exoplanet models.Exoplanet
+
+	// Bind the JSON body to the exoplanet model
+	if err := c.ShouldBindJSON(&exoplanet); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	// Call the service layer to update the exoplanet
+	status, err := services.UpdateExoplanet(&exoplanet)
+	if err != nil {
+		c.JSON(status, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"message": "Exoplanet updated successfully"})
+}
+
+// DeleteExoplanet handles the HTTP DELETE request to delete an exoplanet by ID
+// @Summary Delete Explonets by ID
+// @Router /exoplanets/{id} [DELETE]
+func DeleteExoplanet(c *gin.Context) {
+	// Extract exoplanet ID from URL parameters
+	idParam := c.Param("id")
+	exoplanetID, err := strconv.Atoi(idParam)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid exoplanet ID"})
+		return
+	}
+
+	// Call the service layer to delete the exoplanet
+	status, err := services.DeleteExoplanet(exoplanetID)
+	if err != nil {
+		c.JSON(status, gin.H{"error": err.Error()})
+		return
+	}
+
+	// Respond with a success message if delete was successful
+	c.JSON(http.StatusOK, gin.H{"message": "Exoplanet deleted successfully"})
 }
